--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -4,7 +4,7 @@
 
 > 釋：第二項酌作修正，本項所稱「前項業務」應指「著作權業務」，其業務於八十八年一月二十六日即已由經濟部指定智慧財產局辦理，爰予修正。
 
-* 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法直接、間接、永久或暫時之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾直接收聽或收視為目的，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，藉聲音或影像，向公眾傳達著作內容。由原播送人以外之人，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、公開傳輸：指以有線電、無線電之網路或其他通訊方法，藉聲音或影像向公眾提供或傳達著作內容，包括使公眾得於其各自選定之時間或地點，以上述方法接收著作內容。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、公開展示：指向公眾展示著作內容。十四、發行：指權利人散布能滿足公眾合理需要之重製物。十五、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十六、原件：指著作首次附著之物。十七、權利管理電子資訊：指於著作原件或其重製物，或於著作向公眾傳達時，所表示足以確認著作、著作名稱、著作人、著作財產權人或其授權之人及利用期間或條件之相關電子資訊；以數字、符號表示此類資訊者，亦屬之。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
+* 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法直接、間接、永久或暫時之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾直接收聽或收視為目的，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，藉聲音或影像，向公眾傳達著作內容。由原播送人以外之人，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、公開傳輸：指以有線電、無線電之網路或其他通訊方法，藉聲音或影像向公眾提供或傳達著作內容，包括使公眾得於其各自選定之時間或地點，以上述方法接收著作內容。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、公開展示：指向公眾展示著作內容。十四、發行：指權利人散布能滿足公眾合理需要之重製物。十五、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十六、原件：指著作首次附著之物。十七、權利管理電子資訊：指於著作原件或其重製物，或於著作向公眾傳達時，所表示足以確認著作、著作名稱、著作人、著作財產權人或其授權之人及利用期間或條件之相關電子資訊；以數字、符號表示此類資訊者，亦屬之。十八、防盜拷措施：指著作權人所採取有效禁止或限制他人擅自進入或利用著作之設備、器材、零件、技術或其他科技方法。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
 
 > 釋：照黨團協商條文通過。
 
@@ -50,7 +50,7 @@
 
 * 21 著作人格權專屬於著作人本身，不得讓與或繼承。
 
-* 22 著作人除本法另有規定外，專有重製其著作之權利。表演人專有以錄音、錄影或攝影重製其表演之權利。前二項規定，於專為網路中繼性傳輸，或使用合法著作，屬技術操作過程中必要之過渡性、附帶性而不具獨立經濟意義之暫時性重製，不適用之。但電腦程式不在此限。前項網路中繼性傳輸之暫時性重製情形，包括網路瀏覽、快速存取或其他為達成傳輸功能之電腦或機械本身技術上所不可避免之現象。
+* 22 著作人除本法另有規定外，專有重製其著作之權利。表演人專有以錄音、錄影或攝影重製其表演之權利。前二項規定，於專為網路合法中繼性傳輸，或合法使用著作，屬技術操作過程中必要之過渡性、附帶性而不具獨立經濟意義之暫時性重製，不適用之。但電腦程式著作，不在此限。前項網路合法中繼性傳輸之暫時性重製情形，包括網路瀏覽、快速存取或其他為達成傳輸功能之電腦或機械本身技術上所不可避免之現象。
 
 > 釋：照黨團協商條文通過。
 
@@ -62,7 +62,7 @@
 
 * 25 著作人專有公開上映其視聽著作之權利。
 
-* 26 著作人除本法另有規定外，專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。表演人專有以擴音器或其他器材公開演出其表演之權利。但將表演重製後或公開播送後再以擴音器或其他器材公開演出者，不在此限。錄音著作經公開演出者，著作人得請求公開演出之人支付使用報酬。前項錄音著作如有重製表演之情形者，由錄音著作之著作人及表演人共同請求支付使用報酬。其由一方先行請求者，應將使用報酬分配予他方。
+* 26 著作人除本法另有規定外，專有公開演出其語文、音樂或戲劇、舞蹈著作之權利。表演人專有以擴音器或其他器材公開演出其表演之權利。但將表演重製後或公開播送後再以擴音器或其他器材公開演出者，不在此限。錄音著作經公開演出者，著作人得請求公開演出之人支付使用報酬。
 
 > 釋：照黨團協商條文通過。
 
@@ -232,11 +232,15 @@
 
 > 釋：一、本條新增。二、照黨團協商條文通過。
 
+* 80.2 著作權人所採取禁止或限制他人擅自進入著作之防盜拷措施，未經合法授權不得予以破解、破壞或以其他方法規避之。破解、破壞或規避防盜拷措施之設備、器材、零件、技術或資訊，未經合法授權不得製造、輸入、提供公眾使用或為公眾提供服務。前二項規定，於下列情形不適用之：一、為維護國家安全者。二、中央或地方機關所為者。三、檔案保存機構、教育機構或供公眾使用之圖書館，為評估是否取得資料所為者。四、為保護未成年人者。五、為保護個人資料者。六、為電腦或網路進行安全測試者。七、為進行加密研究者。八、為進行還原工程者。九、其他經主管機關所定情形。前項各款之內容，由主管機關定之，並定期檢討。
+
+> 釋：照黨團協商條文通過。
+
 * 81 著作財產權人為行使權利、收受及分配使用報酬，經著作權專責機關之許可，得組成著作權仲介團體。專屬授權之被授權人，亦得加入著作權仲介團體。第一項團體之許可設立、組織、職權及其監督、輔導，另以法律定之。
 
 > 釋：一、將第一項「主管機關」，修正為「著作權專責機關」。二、增訂第二項，專屬授權之被授權人，亦得加入著作權仲介團體。三、原條文第二項，移列為第三項。
 
-* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第二款之調解不成立時，應依法仲裁。第一項第三款所定爭議之調解，其涉及刑事者以告訴乃論罪之案件為限。
+* 82 著作權專責機關應設置著作權審議及調解委員會，辦理下列事項：一、第四十七條第四項規定使用報酬率之審議。二、著作權仲介團體與利用人間，對使用報酬爭議之調解。三、著作權或製版權爭議之調解。四、其他有關著作權審議及調解之諮詢。前項第三款所定爭議之調解，其涉及刑事者以告訴乃論罪之案件為限。
 
 > 釋：照黨團協商條文通過。
 
@@ -264,7 +268,7 @@
 
 * 86 著作人死亡後，除其遺囑另有指定外，下列之人，依順序對於違反第十八條或有違反之虞者，得依第八十四條及前條第二項規定，請求救濟：一、配偶。二、子女。三、父母。四、孫子女。五、兄弟姊妹。六、祖父母。
 
-* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、（刪除）二、明知為侵害製版權之物而散布或意圖散布而公開陳列或持有者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、明知係侵害電腦程式著作財產權之重製物而作為營業之使用者。六、明知為侵害著作財產權之物而以移轉所有權或出租以外之方式散布者，或明知為侵害著作財產權之物意圖散布而公開陳列或持有者。
+* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害製版權之物而散布或意圖散布而公開陳列或持有者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、以侵害電腦程式著作財產權之重製物作為營業之使用者。六、明知為侵害著作財產權之物而以移轉所有權或出租以外之方式散布者，或明知為侵害著作財產權之物，意圖散布而公開陳列或持有者。
 
 > 釋：照黨團協商條文通過。
 
@@ -282,29 +286,29 @@
 
 * 90 共同著作之各著作權人，對於侵害其著作權者，得各依本章之規定，請求救濟，並得按其應有部分，請求損害賠償。前項規定，於因其他關係成立之共有著作財產權或製版權之共有人準用之。
 
-* 90.1 著作權人或製版權人對輸入或輸出侵害其著作權或製版權之物者，得申請海關先予查扣。前項申請應以書面為之，並釋明侵害之事實，及提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保。海關受理查扣之申請，應即通知申請人。如認符合前項規定而實施查扣時，應以書面通知申請人及被查扣人。申請人或被查扣人，得向海關申請檢視被查扣之物。查扣之物，經申請人取得法院民事確定判決，屬侵害著作權或製版權者，由海關予以沒入。沒入物之貨櫃延滯費、倉租、裝卸費等有關費用暨處理銷燬費用應由被查扣人負擔。前項處理銷燬所需費用，經海關限期通知繳納而不繳納者，依法移送強制執行。有下列情形之一者，除由海關廢止查扣依有關進出口貨物通關規定辦理外，申請人並應賠償被查扣人因查扣所受之損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、海關於通知申請人受理查扣之日起十二日內，未被告知就查扣物為侵害物之訴訟已提起者。三、申請人申請廢止查扣者。前項第二款規定之期限，海關得視需要延長十二日。有下列情形之一者，海關應依申請人之申請返還保證金：一、申請人取得勝訴之確定判決或與被查扣人達成和解，已無繼續提供保證金之必要者。二、廢止查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第二項之保證金，與質權人有同一之權利。
+* 90.1 著作權人或製版權人對輸入或輸出侵害其著作權或製版權之物者，得申請海關先予查扣。前項申請應以書面為之，並釋明侵害之事實，及提供相當於海關核估該進口貨物完稅價格或出口貨物離岸價格之保證金，作為被查扣人因查扣所受損害之賠償擔保。海關受理查扣之申請，應即通知申請人。如認符合前項規定而實施查扣時，應以書面通知申請人及被查扣人。申請人或被查扣人，得向海關申請檢視被查扣之物。查扣之物，經申請人取得法院民事確定判決，屬侵害著作權或製版權者，由海關予以沒入。沒入物之貨櫃延滯費、倉租、裝卸費等有關費用暨處理銷毀費用應由被查扣人負擔。前項處理銷毀所需費用，經海關限期通知繳納而不繳納者，依法移送強制執行。有下列情形之一者，除由海關廢止查扣依有關進出口貨物通關規定辦理外，申請人並應賠償被查扣人因查扣所受損害：一、查扣之物經法院確定判決，不屬侵害著作權或製版權之物者。二、海關於通知申請人受理查扣之日起十二日內，未被告知就查扣物為侵害物之訴訟已提起者。三、申請人申請廢止查扣者。前項第二款規定之期限，海關得視需要延長十二日。有下列情形之一者，海關應依申請人之申請返還保證金：一、申請人取得勝訴之確定判決或與被查扣人達成和解，已無繼續提供保證金之必要者。二、廢止查扣後，申請人證明已定二十日以上之期間，催告被查扣人行使權利而未行使者。三、被查扣人同意返還者。被查扣人就第二項之保證金與質權人有同一之權利。海關於執行職務時，發現進出口貨物外觀顯有侵害著作權之嫌者，得於一個工作日內通知權利人並通知進出口人提供授權資料。權利人接獲通知後對於空運出口貨物應於四小時內，空運進口及海運進出口貨物應於一個工作日內至海關協助認定。權利人不明或無法通知，或權利人未於通知期限內至海關協助認定，或經權利人認定係爭標的物未侵權者，若無違反其他通關規定，海關應即放行。經認定疑似侵權之貨物，海關應採行暫不放行措施。海關採行暫不放行措施後，權利人於三個工作日內，未依第一項至第十項向海關申請查扣，或未採行保護權利之民、刑事訴訟程序，若無違反其他通關規定，海關應即予放行。
 
-> 釋：一、行政程序法就行政機關使違法或合法之行政處分失其效力，區分性質而異其名稱，為期著作權法之用語與該法所使用概念之用語一致，爰予配合修正。二、現行條文所稱「撤銷查扣」，依其規範內容之性質而論，係指海關基於著作權人或製版權人之申請，對輸入或輸出侵害其著作權或製版權之物予以查扣後，另基於法定事由之產生，而以另一行政處分使原先合法查扣之效力終止，應屬「廢止」之概念，爰將本第六項本文、第三款、第八項第二款之用語，均修正為「廢止」，以期與行政程序法之用語一致。三、第三項新增。海關所為查扣，旨在防止著作權人或製版權人損害之擴大。是申請人申請查扣後，仍須續行訴訟程序，以維自身權益。
+> 釋：照黨團協商條文通過。
 
 * 90.2 前條之實施辦法，由主管機關會同財政部定之。
 
-* 90.3 違反第八十條之一規定，致著作權人受損害者，負賠償責任。數人共同違反者，負連帶賠償責任。第八十四條、第八十八條之一、第八十九條之一及第九十條之一規定，於違反第八十條之一規定者，準用之。
-
-> 釋：一、本條新增。二、照黨團協商條文通過。
-
-* 91 意圖營利而以重製之方法侵害他人之著作財產權者，處五年以下有期徒刑、拘役，或併科新臺幣二十萬元以上二百萬元以下罰金。非意圖營利而以重製之方法侵害他人之著作財產權，重製份數超過五份，或其侵害總額按查獲時獲得合法著作重製物市價計算，超過新臺幣三萬元者，處三年以下有期徒刑、拘役或科或併科新臺幣七十五萬元以下罰金。以重製於光碟之方法犯第一項之罪者，處五年以下有期徒刑、拘役，或併科新臺幣五十萬元以上五百萬元以下罰金。
+* 90.3 違反第八十條之一或第八十條之二規定，致著作權人受損害者，負賠償責任。數人共同違反者，負連帶賠償責任。第八十四條、第八十八條之一、第八十九條之一及第九十條之一規定，於違反第八十條之一或第八十條之二規定者，準用之。
 
 > 釋：照黨團協商條文通過。
 
-* 91.1 意圖營利而以移轉所有權之方法散布著作原件或其重製物而侵害他人之著作財產權者，處三年以下有期徒刑、拘役或科或併科新臺幣七十五萬元以下罰金。非意圖營利而以移轉所有權之方法散布著作原件或其重製物，或意圖散布而公開陳列或持有而侵害他人之著作財產權者，散布份數超過五份，或其侵害總額按查獲時獲得合法著作重製物市價計算，超過新臺幣三萬元者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金。犯第一項之罪，其重製物為光碟者，處三年以下有期徒刑、拘役，或併科新臺幣一百五十萬元以下罰金。犯前項之罪，經供出其物品來源，因而破獲者，得減輕其刑。
-
-> 釋：一、本條新增。二、照黨團協商條文通過。
-
-* 92 意圖營利而以公開口述、公開播送、公開上映、公開演出、公開傳輸、公開展示、改作、編輯或出租之方法侵害他人著作財產權者，處三年以下有期徒刑、拘役，或併科新臺幣七十五萬元以下罰金。非意圖營利而犯前項之罪，其所侵害之著作超過五件，或權利人所受損害超過新臺幣三萬元者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金。
+* 91 擅自以重製之方法侵害他人之著作財產權者，處三年以下有期徒刑、拘役，或科或併科新臺幣七十五萬元以下罰金。意圖銷售或出租而擅自以重製之方法侵害他人之著作財產權者，處六月以上五年以下有期徒刑，得併科新臺幣二十萬元以上二百萬元以下罰金。以重製於光碟之方法犯前項之罪者，處六月以上五年以下有期徒刑，得併科新臺幣五十萬元以上五百萬元以下罰金。著作僅供個人參考或合理使用者，不構成著作權侵害。
 
 > 釋：照黨團協商條文通過。
 
-* 93 意圖營利而有下列情形之一者，處二年以下有期徒刑、拘役，或併科新臺幣五十萬元以下罰金：一、違反第七十條規定者。二、以第八十七條第二款、第三款、第五款或第六款之方法侵害他人之著作財產權者。非意圖營利而犯前項之罪，其重製物超過五份，或權利人所受損害超過新臺幣三萬元者，處一年以下有期徒刑、拘役，或科或併科新臺幣二十五萬元以下罰金。
+* 91.1 擅自以移轉所有權之方法散布著作原件或其重製物而侵害他人之著作財產權者，處三年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金。明知係侵害著作財產權之重製物而散布或意圖散布而公開陳列或持有者，處三年以下有期徒刑，得併科新臺幣七萬元以上七十五萬元以下罰金。犯前項之罪，其重製物為光碟者，處六月以上三年以下有期徒刑，得併科新臺幣二十萬元以上二百萬元以下罰金。但違反第八十七條第四款規定輸入之光碟，不在此限。犯前二項之罪，經供出其物品來源，因而破獲者，得減輕其刑。
+
+> 釋：照黨團協商條文通過。
+
+* 92 擅自以公開口述、公開播送、公開上映、公開演出、公開傳輸、公開展示、改作、編輯、出租之方法侵害他人之著作財產權者，處三年以下有期徒刑、拘役，或科或併科新臺幣七十五萬元以下罰金。
+
+> 釋：照黨團協商條文通過。
+
+* 93 有下列情形之一者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條第一款、第三款、第五款或第六款方法之一侵害他人之著作權者。但第九十一條之一第二項及第三項規定情形，不包括在內。
 
 > 釋：照黨團協商條文通過。
 
@@ -318,9 +322,9 @@
 
 * 96 違反第五十九條第二項或第六十四條規定者，科新臺幣五萬元以下罰金。
 
-* 96.1 違反第八十條之一者，處一年以下有期徒刑、拘役或科或併科新臺幣二萬元以上二十五萬元以下罰金。
+* 96.1 有下列情形之一者，處一年以下有期徒刑、拘役或科或併科新臺幣二萬元以上二十五萬元以下罰金：一、違反第八十條之一規定者。二、違反第八十條之二第二項規定者。
 
-> 釋：一、本條新增。二、照黨團協商條文通過。
+> 釋：照黨團協商條文通過。
 
 * 96.2 依本章科罰金時，應審酌犯人之資力及犯罪所得之利益。如所得之利益超過罰金最多額時，得於所得利益之範圍內酌量加重。
 
