--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -74,6 +74,10 @@
 
 * 34 電業設備，應力求標準化，其方式、規範及裝置之規則，由中央主管機關定之。
 
+* 34.1 電業設備或用戶用電設備屬中央主管機關所定工程範圍者，其設計及監造，應由依法登記執業之電機技師或相關專業技師辦理。所定工程範圍外，應由電機技師或電器承裝業辦理。但該工程僅供政府機關或公營事業機構自用時，得由該政府機關或公營事業機構內，依法取得電機技師或相關專業技師證書者辦理設計及監造。前項用戶用電設備工程範圍應依中華民國九十三年十二月二十四日本法修正施行前既有電業實施之工程範圍為準；其修正時，中央主管機關應會商全國性電機技師公會、相關電氣工程工業同業公會及其他相關公會定之。電業或用戶未依第一項規定辦理者，其屬於電業設備者，主管機關應禁止電業使用該設備；其屬於用戶用電設備者，電業對該設備不得供電。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
+
 * 35 供電電壓及交流電週率標準，由中央主管機關定之。
 
 * 36 供電電壓之變動率，以不超過左列百分數為準：一、電燈電壓，高低各百分之五。二、電力及電熱之電壓，高低各百分之十。電燈、電力、電熱合一線路時，依電燈電壓之標準。
@@ -158,9 +162,9 @@
 
 * 74 政府機關為防禦災害要求緊急供電時，電業不得拒絕，其所需費用，由該機關負擔。
 
-* 75 電器承裝業，非向所在直轄市或縣（市）地方主管機關登記，並向該區內之電業訂立契約，不得營業。電器承裝業之電匠，非經所在直轄市或縣（市）地方主管機關考驗及格給予憑證，不得工作。前二項登記及考驗，地方主管機關辦理有困難時，得報請中央主管機關統籌辦理或委託該區域內之電業辦理。電器承裝業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。電匠考驗、發照、撤銷或廢止證照及管理之規則，由中央主管機關定之。
+* 75 電器承裝業，應向直轄市或縣（市）主管機關登記，始得營業，並應於開業後一個月內加入相關電氣工程工業同業公會。相關電氣工程工業同業公會不得拒絕其加入。電器承裝業登記管理業務，直轄市或縣（市）主管機關得委託相關電氣工程工業同業公會辦理。電器承裝業之電匠，非經所在地直轄市或縣（市）地方主管機關考驗及格給予憑證，不得工作。前項考驗，地方主管機關辦理有困難時，得報請中央主管機關統籌辦理或委託該區域內之電業辦理。電器承裝業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。電匠考驗、發照、撤銷或廢止證照及管理之規則，由中央主管機關定之。
 
-> 釋：一、第一項酌作修正。將「縣（市）地方主管機關修正為「直轄市或縣（市）地方主管機關」。二、第二項配合第一項，酌作文字修正。三、第三項增訂地方主管機關辦理有困難時，得報請中央主管機關統籌辦理。四、原條文第四項分為二：分列第四項有關電器承裝業管理規則之訂定及第五項電匠考驗規則之訂定。
+> 釋：照黨團協商條文通過。
 
 * 75.1 裝有電力設備之工廠、礦場、供公眾使用之建築物及受電電壓屬高壓以上之用電場所，應置專任電氣技術人員或委託用電設備檢驗維護業負責維護與電業供電設備分界點以內一般及緊急電力設備之用電安全。未依前項規定置專任電氣技術人員或委託用電設備檢驗維護業維護電力設備者，電業得拒絕供電。第一項場所之認定範圍及標準，由中央主管機關定之。專任電氣技術人員及用電設備檢驗維護業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。
 
