公職人員選舉罷免法 2005.1.20

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -116,9 +116,9 @@
 
 > 釋：照現行法第一款內「經判刑確定者」修正為「經依刑法判刑確定者」。
 
-* 35 左列人員不得申請登記為候選人：一、現役軍人、軍事及警察學校學生或警察。二、現在學校肄業學生。三、各級選舉委員會之委員、監察人員、職員、鄉（鎮、市、區）公所辦理選舉事務人員及投票所、開票所工作人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。第一項第二款之現在學校肄業學生，屬於現職公職人員再行進修者，得申請登記為候選人。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
+* 35 下列人員不得登記為候選人：一、現役軍人。二、服替代役之現役役男。三、軍事學校學生。四、各級選舉委員會之委員、監察人員、職員、鄉（鎮、市、區）公所辦理選舉事務人員及投票所、開票所工作人員。五、依其他法律規定不得登記為候選人者。前項第一款之現役軍人，屬於後備軍人或補充兵應召者，在應召未入營前，或係受教育、勤務及點閱召集，均不受限制。當選人因第一百零三條第一項第二款至第四款情事之一，經法院判決當選無效確定者，不得申請登記為該次公職人員補選候選人。
 
-> 釋：一、原條文第一項第一款增列「軍事及警察學校學生」等字。二、參照本法施行細則第三十三條規定，將原條文第一項第三款辦理選舉事務人員予以明確規定。
+> 釋：一、第一項序文「左列」修正為「下列」，並刪除「申請」二字。二、基於平等原則及維護憲法保障之參政權，無特別限制警察人員參選之必要，爰加以刪除，並一併刪除警察學校學生限制參選規定。三、隨著民主政治發展，限制學生參選之時空背景已漸不存在，爰刪除第一項第二款現在學校肄業學生不得登記為候選人之規定，第三項並一併刪除。四、服替代役者，於服役期間無現役軍人身份，為資周延，爰增列第一項第二款。五、原條文第一項第一款有關軍事學校學生不得申請登記為候選人之規定，移列為第三款。六、原條文第一項第三款移列為第四款。七、按其他法律亦有不得登記為候選人之規定，為周延起見，爰於第一項增列第五款規定。八、配合兵役法之修正，第二項「國民兵」修正為「補充兵」。九、當選人經選舉訴訟判決當選無效確定，應不適合再申請登記為該次公職人員補選候選人，爰增列第三項。十、原條文第四項原係參酌憲法第二十八條第三項規定而訂，依憲法增修條文第一條第一項規定，該條文已停止適用，本項已無適用必要，爰予刪除。
 
 * 35.1 依法設立之政黨，得推薦候選人參加公職人員選舉，經政黨推薦之候選人，應為該政黨黨員，並檢附加蓋中央主管機關發給該政黨圖記之政黨推薦書，於候選人申請登記期間內，向選舉委員會辦理登記。前項推薦書，應於申請登記候選人時繳送受理登記之選舉委員會，登記期間截止後補送者，不予受理。
 
