--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -42,9 +42,9 @@
 
 > 釋：一、本條新增。二、照黨團協商條文通過。
 
-* 12.3 水資源相關基金應依各水質水量保護區分別設置專戶，各專戶並設置運用小組管理運用。專戶運用小組成員由相關中央主管機關、水質水量保護區與其用水地區地方主管機關、民意機關代表、居民代表及社會公正人士組成，其設置要點由水資源相關基金管理委員會定之。涉及原住民族地區之水質水量保護區，其專戶運用小組居民代表成員，應依比例由原住民居民代表擔任；其水源保育與回饋費，應依比例運用於原住民族地區。原依本法附徵之水源特定區協助地方建設費用，納入水源特定區專戶管理運用。
+* 12.3 水資源相關基金應依各水質水量保護區分別設置專戶，各專戶並設置運用小組管理運用。專戶運用小組成員由相關中央主管機關、水質水量保護區與其用水地區地方主管機關、民意機關代表、居民代表及社會公正人士組成；其設置要點由水資源相關基金管理委員會定之。涉及原住民族地區之水質水量保護區，其專戶運用小組居民代表成員，應依比例由原住民居民代表擔任；其水源保育與回饋費，應依比例運用於原住民族地區。本法中華民國九十三年六月三十日修正公布施行前，附徵之水源特定區協助地方建設費用，於水源保育與回饋費徵收前，繼續於水價外附徵；其協助臺北水源特定區地方建設辦法，繼續適用。水源保育與回饋費徵收後，原依本法附徵之水源特定區協助地方建設費用，納入水源特定區專戶管理運用。
 
-> 釋：一、本條新增。二、照黨團協商條文通過。
+> 釋：為使原依本法第十二條之一附徵之水源特定區協助地方建設費用，於水源保育與回饋費徵收前能依法繼續於水價外附徵與協助台北水源特定區內之地方建設，爰新增第十二條之三第三項。原第十二條之三第三項移列四項，並酌修相關文字。
 
 * 13 中央主管機關得視自來水之水源分佈、工程建設及社會經濟情形，劃定區域，實施區域供水。前項經劃定之區域，中央主管機關得因事實需要修正或變更之。
 
