--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -592,6 +592,14 @@
 
 > 釋：照黨團協商條文通過。
 
+* 174.1 第一百七十一條第一項第二款、第三款或前條第一項第八款之已依本法發行有價證券公司之董事、監察人、經理人或受僱人所為之無償行為，有害及公司之權利者，公司得聲請法院撤銷之。前項之公司董事、監察人、經理人或受僱人所為之有償行為，於行為時明知有損害於公司之權利，且受益人於受益時亦知其情事者，公司得聲請法院撤銷之。依前二項規定聲請法院撤銷時，得並聲請命受益人或轉得人回復原狀。但轉得人於轉得時不知有撤銷原因者，不在此限。第一項之公司董事、監察人、經理人或受僱人與其配偶、直系親屬、同居親屬、家長或家屬間所為之處分其財產行為，均視為無償行為。第一項之公司董事、監察人、經理人或受僱人與前項以外之人所為之處分其財產行為，推定為無償行為。第一項及第二項之撤銷權，自公司知有撤銷原因時起，一年間不行使，或自行為時起經過十年而消滅。
+
+> 釋：一、本條新增。二、參考民法第二百四十四條第一項規定，應允許公司得聲請法院撤銷之，以保護公司之權利，爰為第一項規定。三、參照民法第二百四十四條第二項規定，應允許公司得聲請法院撤銷之，俾受益人及公司之利益，均得保護，爰為第二項規定。四、參考民法第二百四十四條第四項規定，於第三項賦予公司對明知有損害公司之受益人或轉得人有回復原狀之請求權。但轉得人於轉得時不知有撤銷原因者，為保障其交易安全，爰為例外規定。五、為利公司撤銷權之行使，並防止公司之董事、監察人、經理人或受僱人假藉與其配偶、直系親屬、同居親屬、家長或家屬間所為之處分其財產行為，以規避賠償責任，爰參酌破產法第十五條第二項規定，於第四項將其擬制為無償行為。六、第一項之公司董事、監察人、經理人或受僱人，與第四項以外之人所為之處分財產行為，則於第五項為舉證責任倒置之規定，將其推定為無償行為。七、撤銷權若永久存續，則權利狀態永不確定，實有害於交易之安全，爰參考民法第二百四十五條，於第六項就第一項、第二項之撤銷權為除斥期間之規定。
+
+* 174.2 第一百七十一條第一項第二款、第三款及第一百七十四條第一項第八款之罪，為洗錢防制法第三條第一項所定之重大犯罪，適用洗錢防制法之相關規定。
+
+> 釋：一、本條新增。二、按第一百七十一條為最重本刑十年以下有期徒刑之罪，第一百七十四條第一項第八款之罪為一年以上七年以下有期徒刑之罪，均對證券市場交易秩序及投資人權益造成重大影響，為防止該等犯罪行為人掩飾、隱匿因自己犯罪所得財物或財產上利益，爰增訂本條，將第一百七十一條第一項第二款、第三款及第一百七十四條第一項第八款之罪，列為洗錢防制法第三條第一項所定之重大犯罪，並適用洗錢防制法相關規定。
+
 * 175 違反第十八條第一項、第二十二條、第二十八條之二第一項、第四十三條第一項、第四十三條之一第二項、第三項、第四十三條之五第二項、第三項、第四十三條之六第一項、第四十四條第一項至第三項、第六十條第一項、第六十二條第一項、第九十三條、第九十六條至第九十八條、第一百十六條、第一百二十條或第一百六十條之規定者，處二年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。
 
 > 釋：一、配合強制公開收購制度之增列，增列違反強制公開收購規定之刑責；另增列違反本會命令公開收購人變更公開收購申報事項並重行申報及公告、或停止公開收購行為之刑責。二、對於有價證券之私募違反私募應經股東會決議及對象之規定者，明定相關罰則。
@@ -623,6 +631,10 @@
 > 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 181 本法施行前已依證券商管理辦法公開發行之公司股票或公司債券，視同依本法公開發行。
+
+* 181.1 法院為審理違反本法之犯罪案件，得設立專業法庭或指定專人辦理。
+
+> 釋：一、本條新增。二、證券犯罪案件有其專業性、技術性，一般刑事法庭法官若無相當專業知識者，較不易掌握案件重點，為使證券犯罪案件之審理能符合法律及社會公平正義之要求，有設立證券專業法庭之必要，爰增訂本條。
 
 * 181.2 經主管機關依第十四條之二第一項但書規定要求設置獨立董事及依第十四條之四第一項但書規定命令設置審計委員會，或第二十六條之三施行時依同條第六項規定董事、監察人應當然解任者，得自現任董事或監察人任期屆滿時，始適用之。
 
