法院組織法 2005.5.20

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -20,7 +20,7 @@
 
 * 11 地方法院或其分院之類別及員額，依附表之規定。各地方法院或其分院應適用之類別及其變更，由司法院定之。
 
-> 釋：本條文未修正，配合第十二條條文之修正，修正本條第一項附表相關員額。
+> 釋：條文本文不修正，修正附表書記官及通譯之職稱。
 
 * 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等。司法院得調候補法官至地方法院辦事，承實任法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。地方法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。候補法官調地方法院辦事期間，計入其候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
 
@@ -46,9 +46,13 @@
 
 * 21 地方法院設登記處，置主任及佐理員。主任，薦任第九職等或簡任第十職等；佐理員，委任第三職等至第五職等或薦任第六職等至第八職等。前項薦任佐理員員額，不得逾同一法院佐理員總額二分之一。
 
-* 22 地方法院設書記處，置書記官長一人，薦任第九職等或簡任第十職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第六職等至第八職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並得視業務需要分科辦事，各科科長由薦任書記官兼任，不另列等。直轄市地方法院書記官長，薦任第九職等或簡任第十職等。書記處各科並得視業務需要分股辦事，各股股長由書記官兼任，不另列等。第一項薦任書記官員額，不得逾同一法院書記官總額二分之一。
+* 22 地方法院設書記處，置書記官長一人，薦任第九職等至簡任第十職等，承院長之命處理行政事務；一等書記官，薦任第八職等至第九職等；二等書記官，薦任第六職等至第七職等；三等書記官，委任第四職等至第五職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並得分科、分股辦事，科長由一等書記官兼任，股長由一等書記官或二等書記官兼任，均不另列等。前項一等書記官、二等書記官總額，不得逾同一法院一等書記官、二等書記官、三等書記官總額二分之一。
 
-* 23 地方法院置通譯，委任第三職等至第五職等或薦任第六職等至第八職等；技士，委任第三職等至第五職等；執達員，委任第二職等至第四職等或僱用；錄事、庭務員，均僱用。前項薦任通譯員額，不得逾同一法院通譯總額二分之一。地方法院為辦理值庭、執行、警衛、解送人犯及有關司法警察事務，置法警；法警，委任第二職等至第四職等或僱用。法警長、副法警長，委任第四職等至第五職等或薦任第六職等；其辦法，由司法院會同行政院定之。
+> 釋：一、中央機關職務列等表已經考試院於八十五年十一月廿五日修正發布，溯自同年月十六日起施行，爰配合修正本條第一項書記官之職等，並酌作文字修正。二、地方法院書記官之任用資格與職掌業務，與高等法院、最高法院之書記官無異，工作負荷更為繁重，為求平衡，爰將地方法院書記官之職等比照高等法院、最高法院之書記官職等提高。三、配合委任書記官參加委任晉升薦任官等訓練合格後，僅得擔任列等最高為薦任第七職等之職務，修正書記官之職稱為一等書記官、二等書記官、三等書記官，並明定其職等。四、鑒於各地方法院書記官之工作負荷及人員日趨增加，原書記處下分科辦事，其單位主管已無法充分有效管理，故須再行分股辦事，以收指揮監督並提高行政之效能，爰刪除第二項直轄市地方法院始得分股之規定。五、原第三項移列為第二項，並酌作文字修正。
+
+* 23 地方法院置一等通譯，薦任第七職等至第八職等；二等通譯，薦任第六職等至第七職等；三等通譯，委任第四職等至第五職等；技士，委任第五職等或薦任第六職等至第七職等；執達員，委任第三職等至第五職等；錄事、庭務員，均委任第一職等至第三職等。前項一等通譯、二等通譯總額，不得逾同一法院一等通譯、二等通譯、三等通譯總額二分之一。地方法院為辦理值庭、執行、警衛、解送人犯及有關司法警察事務，置法警；法警長，委任第五職等或薦任第六職等至第七職等；副法警長，委任第四職等至第五職等或薦任第六職等；法警，委任第三職等至第五職等；其管理辦法，由司法院會同行政院定之。
+
+> 釋：一、公務人員任用法及中央機關職務列等表修正公(發)布後，多項職務之官、職等均已變更，爰配合修正本條第一項通譯、技士、執達員之職等，並將錄事、庭務員職等列為委任第一職等至第三職等。二、配合委任通譯參加委任晉升薦任官等訓練合格後，僅得擔任列等最高為薦任第七職等之職務，修正通譯之職稱為一等通譯、二等通譯、三等通譯，並明定其職等。三、第二項酌作文字修正。四、為配合公務人員任用法及中央機關職務列等表之修正公(發)布，爰分別修正第三項法警、法警長之職等。
 
 * 24 地方法院設人事室，置主任一人，薦任第八職等至第九職等，副主任一人，薦任第七職等至第九職等；必要時得依法置佐理人員。依法律規定辦理人事管理、人事查核等事項。直轄市地方法院人事室，必要時得分股辦事，由佐理人員兼任之，不另列等。事務較簡之地方法院，得僅置人事管理員，委任第五職等至薦任第七職等。
 
@@ -70,7 +74,7 @@
 
 * 33 高等法院或其分院之類別及員額，依附表之規定。高等法院或其分院應適用之類別及其變更，由司法院定之。
 
-> 釋：本條文未修正，配合第三十四條條文之修正，修正本條第一項附表相關員額。
+> 釋：條文本文不修正，修正附表書記官及通譯之職稱。
 
 * 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院法官，繼續服務二年以上，得晉敘至簡任第十二職等至第十四職等。司法院得調地方法院試署或候補法官至高等法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。高等法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。試署法官或候補法官調高等法院辦事期間，計入其試署或候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
 
@@ -82,9 +86,13 @@
 
 * 37 高等法院設公設辯護人室，置公設辯護人，簡任第十職等至第十一職等或薦任第九職等；其公設辯護人在二人以上者，置主任公設辯護人，簡任第十職等至第十二職等。
 
-* 38 高等法院設書記處，置書記官長一人，薦任第九職等或簡任第十職等至第十一職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第七職等至第九職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導事務，並視業務需要分科辦事，各科於必要時，得再分股，均不另列等。各科科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。前項薦任書記官員額，不得逾同一法院書記官總額二分之一。
+* 38 高等法院設書記處，置書記官長一人，薦任第九職等至簡任第十一職等，承院長之命處理行政事務；一等書記官，薦任第八職等至第九職等；二等書記官，薦任第六職等至第七職等；三等書記官，委任第四職等至第五職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導事務，並得分科、分股辦事，科長由一等書記官兼任；股長由一等書記官或二等書記官兼任，均不另列等。前項一等書記官、二等書記官總額，不得逾同一法院一等書記官、二等書記官、三等書記官總額二分之一。
 
-* 39 高等法院置通譯，委任第三職等至第五職等或薦任第七職等至第九職等；技士，委任第三職等至第五職等；執達員，委任第二職等至第四職等或僱用；錄事、庭務員，均僱用。前項薦任通譯員額，不得逾同一法院通譯總額二分之一。第二十三條第三項規定，於高等法院或其分院準用之。
+> 釋：一、中央機關職務列等表已經考試院於八十五年十一月廿五日修正發布，溯自同年月十六日起施行，爰配合修正本條第一項書記官之職等。二、配合委任書記官參加委任晉升薦任官等訓練合格後，僅得擔任薦任第七職等之職務，修正書記官之職稱為一等書記官、二等書記官、三等書記官，並明定其職等。三、第二項酌作文字修正。
+
+* 39 高等法院置一等通譯，薦任第八職等至第九職等；二等通譯，薦任第六職等至第七職等；三等通譯，委任第四職等至第五職等；技士，委任第五職等或薦任第六職等至第七職等；執達員，委任第三職等至第五職等；錄事、庭務員，均委任第一職等至第三職等。前項一等通譯、二等通譯總額，不得逾同一法院一等通譯、二等通譯、三等通譯總額二分之一。第二十三條第三項規定，於高等法院或其分院準用之。
+
+> 釋：一、公務人員任用法及中央機關職務列等表修正公(發)布後，多項職務官、職等均已變更，爰配合修正本條第一項通譯、技士、執達員之職等，並將錄事、庭務員職等列為委任第一職等至第三職等。二、配合委任通譯參加委任晉升薦任官等訓練合格後，僅得擔任列等最高為薦任第七職等之職務，修正通譯之職稱為一等通譯、二等通譯、三等通譯，並明定其職等。三、第二項酌作文字修正。四、第三項不修正。
 
 * 40 高等法院設人事室，置主任一人，簡任第十職等，副主任一人，薦任第九職等或簡任第十職等；科員，委任第四職等至第五職等或薦任第六職等至第七職等，其中薦任科員不得逾同一法院科員總額三分之一，依法律規定辦理人事管理、人事查核等事項，並得分科辦事；科長，薦任第九職等。
 
@@ -106,7 +114,7 @@
 
 * 49 最高法院員額，依附表之規定。
 
-> 釋：本條文未修正，配合第五十一條條文之修正，修正本條附表相關員額。
+> 釋：條文本文不修正，修正附表書記官及通譯之職稱。
 
 * 50 最高法院置院長一人，特任，綜理全院行政事務，並任法官。
 
@@ -114,9 +122,13 @@
 
 > 釋：一、第一項不修正。二、為提高裁判品質、增進司法效能、並減輕最高法院法官工作負荷，有設助理之必要，故明定於必要時，得聘用各種專業人員充任法官助理。三、法官或候補法官充任助理期間之年資應不受影響，爰增訂之。四、法官助理之工作與律師所執行之業務，均屬司法實務工作，故增訂具律師業資格者充任法官助理期間計入律師執業年資。
 
-* 52 最高法院設書記廳，置書記官長一人，簡任第十一職等至第十三職等，承院長之命處理行政事務；書記官，委任第三職等至第五職等或薦任第七職等至第九職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並視業務需要分科辦事，各科於必要時，得再分股。各科科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。前項薦任書記官員額，不得逾書記官總額二分之一。
+* 52 最高法院設書記廳，置書記官長一人，簡任第十一職等至第十三職等，承院長之命處理行政事務；一等書記官，薦任第八職等至第九職等；二等書記官，薦任第六職等至第七職等；三等書記官，委任第四職等至第五職等，分掌紀錄、文書、研究考核、總務、資料及訴訟輔導等事務，並得分科、分股辦事，科長由一等書記官兼任；股長由一等書記官或二等書記官兼任，均不另列等。前項一等書記官、二等書記官總額，不得逾一等書記官、二等書記官、三等書記官總額二分之一。
 
-* 53 最高法院置通譯，薦任第七職等至第九職等或委任第三職等至第五職等；技士，委任第三職等至第五職等；執達員，委任第二職等至第四職等或僱用；錄事、庭務員，均僱用。前項薦任通譯員額，不得逾通譯總額二分之一。第二十三條第三項之規定，於最高法院準用之。
+> 釋：一、中央機關職務列等表已經考試院於八十五年十一月廿五日修正發布，溯自同年月十六日起施行，爰配合修正本條第一項書記官之職等。二、配合委任書記官參加委任晉升薦任官等訓練合格後，僅得擔任薦任第七職等之職務，修正書記官之職稱為一等書記官、二等書記官、三等書記官，並明定其職等。三、第二項酌作文字修正。
+
+* 53 最高法院置一等通譯，薦任第八職等至第九職等；二等通譯，薦任第六職等至第七職等；三等通譯，委任第四職等至第五職等；技士，委任第五職等或薦任第六職等至第七職等；執達員，委任第三職等至第五職等；錄事、庭務員，均委任第一職等至第三職等。前項一等通譯、二等通譯總額，不得逾一等通譯、二等通譯、三等通譯總額二分之一。第二十三條第三項之規定，於最高法院準用之。
+
+> 釋：一、公務人員任用法及中央機關職務列等表修正公(發)布後，各機關自八十五年十一月十六日起不得再依「雇員管理規則」僱用執達員、錄事、庭務員、法警等，又通譯、執達員、技士等多項職務官職等均已變更，爰配合修正本條第一項之通譯、技士、執達員之職等，並將錄事、庭務員職等列為委任第一職等至第三職等。二、配合委任通譯參加委任晉升薦任官等訓練合格後，僅得擔任列等最高為薦任第七職等之職務，修正通譯之職稱為一等通譯、二等通譯、三等通譯，並明定其職等。三、第二項酌作文字修正。四、第三項不修正。
 
 * 54 最高法院設人事室，置主任一人，簡任第十職等，副主任一人，薦任第九職等或簡任第十職等；科員，委任第四職等至第五職等或薦任第六職等至第七職等，其中薦任科員不得逾總額三分之一，依法律規定辦理人事管理、人事查核等事項，並得分股辦事；股長由科員兼任，不另列等。
 
@@ -166,25 +178,31 @@
 
 * 68 高等法院以下各級法院及其分院檢察署，置法醫師，法醫師在二人以上者，置主任法醫師。法醫師，薦任第七職等至第九職等；主任法醫師，薦任第九職等或簡任第十職等。但地方法院及其分院檢察署法醫師得列委任第五職等。高等法院以下各級法院及其分院檢察署，置檢驗員，委任第三職等至第五職等或薦任第六職等至第八職等。
 
-* 69 第二十二條、第二十三條第三項、第三十八條、第五十二條之規定，於地方法院或其分院檢察署、高等法院或其分院檢察署、最高法院檢察署分別準用之。高等法院以下各級法院及其分院檢察署，得視業務需要設執行科，掌理關於刑事執行事務；必要時，得再分股。科長由薦任書記官兼任；股長由委任或薦任書記官兼任，均不另列等。高等法院或其分院檢察署，視事務之繁簡，得設所務科，掌理關於監督看守所及少年觀護所之行政事務。置科長一人，薦任第九職等；科員，委任第四職等至第五職或薦任第六職等至第七職等；其中薦任科員員額不得逾同一檢察署科員總額三分之一，必要時並得視業務需要分股辦事；股長由薦任科員兼任，不另列等，並酌置雇員，僱用。
+* 69 第二十二條、第二十三條第三項、第三十八條、第五十二條之規定，於地方法院或其分院檢察署、高等法院或其分院檢察署、最高法院檢察署分別準用之。高等法院以下各級法院及其分院檢察署，得設執行科，掌理關於刑事執行事務，並得分股辦事。科長由一等書記官兼任；股長由一等書記官或二等書記官兼任，均不另列等。高等法院或其分院檢察署，得設所務科，掌理關於監督看守所及少年觀護所之行政事務，並得分股辦事。置科長一人，薦任第九職等；科員，委任第五職等或薦任第六職等至第七職等；書記，委任第一職等至第三職等；股長由薦任科員兼任，不另列等。
 
-* 70 最高法院檢察署、高等法院及分院檢察署置通譯，薦任第七職等至第九職等或委任第三職等至第五職等；技士，委任第三職等至第五職等。地方法院及分院檢察署置通譯，委任第三職等至第五職等或薦任第六職等至第八職等；技士，委任第三職等至第五職等。前二項薦任通譯員額，不得逾同一檢察署通譯總額二分之一。
+> 釋：一、第一項不修正。二、第二項配合第一項準用條文，酌作文字修正。三、中央機關職務列等表已經考試院於八十五年十一月廿五日修正發布，溯自同年月十六日起施行，爰配合修正第三項科員之職等，並刪除薦任科員員額不得逾同一檢察署科員總額三分之一之限制，另將「雇員」改為「書記」，職等列為委任第一職等至第三職等。
 
-* 71 各級法院及分院檢察署置錄事，僱用。
+* 70 最高法院檢察署、高等法院及分院檢察署置一等通譯，薦任第八職等至第九職等；二等通譯，薦任第六職等至第七職等；三等通譯，委任第四職等至第五職等；技士，委任第五職等或薦任第六職等至第七職等。地方法院及分院檢察署置一等通譯，薦任第七職等至第八職等；二等通譯，薦任第六職等至第七職等；三等通譯，委任第四職等至第五職等；技士，委任第五職等或薦任第六職等至第七職等。前二項一等通譯、二等通譯總額，不得逾同一檢察署一等通譯、二等通譯、三等通譯總額二分之一。
+
+> 釋：一、中央機關職務列等表已經考試院於八十五年十一月廿五日修正發布，溯自同年月十六日起施行，爰配合修正第一項、第二項通譯、技士之官等、職等。二、配合委任通譯參加委任晉升薦任官等訓練合格復，僅得擔任列等最高為薦任第七職等之職務，修正通譯之職稱為一等通譯、二等通譯、三等通譯，並明定其職等。三、第三項酌作文字修正。
+
+* 71 各級法院及分院檢察署置錄事，委任第一職等至第三職等。
+
+> 釋：公務人員任用法及中央機關職務列等表修正公(發)布後，各機關自八十五年十一月十六日起不得再依「雇員管理規則」僱用錄事，爰配合將本條錄事之職等修正為委任第一職等至第三職等。
 
 * 72 第二十四條至第二十六條、第四十條至第四十二條、第五十四條至第五十六條之規定，於地方法院或其分院檢察署、高等法院或其分院檢察署、最高法院檢察署分別準用之。
 
 * 73 地方法院或其分院檢察署之類別及員額，依附表之規定。各地方法院或其分院檢察署應適用之類別及其變更，由行政院定之。
 
-> 釋：本條文未修正，配合第六十六條之一、第六十六條之二之增訂，修正本條第一項附表相關員額。
+> 釋：條文本文不修正，修正附表書記官及通譯之職稱。
 
 * 74 高等法院或其分院檢察署之類別及員額，依附表之規定。高等法院或其分院檢察署應適用之類別及其變更，由行政院定之。
 
-> 釋：本條文未修正，配合第六十六條之一之增訂，修正本條第一項附表相關員額。
+> 釋：條文本文不修正，修正附表書記官、通譯及書記之職稱。
 
 * 75 最高法院檢察署員額，依附表之規定。
 
-> 釋：本條文未修正，配合第六十六條之一之增訂，修正本條附表相關員額。
+> 釋：條文本文不修正，修正附表書記官及通譯職稱。
 
 * 76 檢察官得調度司法警察，法官於辦理刑事案件時，亦同。調度司法警察條例另定之。
 
@@ -269,6 +287,10 @@
 * 113 被監督之人員，如有前條第二款情事，而情節較重或經警告不悛者，監督長官得依公務員懲戒法辦理。
 
 * 114 本章之規定，不影響審判權之行使。
+
+* 114.1 各級法院及各級法院檢察署原依雇員管理規則進用之現職執達員、法警、錄事、庭務員、雇員，其未具公務人員任用資格者，得占用原職之職缺，繼續僱用至離職時為止。
+
+> 釋：一、本條新增。二、為因應公務人員任用法及中央機關職務列等表修正公(發)布後，各機關自八十五年十一月十六日起不得再依「雇員管理規則」雇用執達員、錄事、庭務員、法警，爰增訂本條文。
 
 * 115 本法自公布日施行。
 
