公職人員選舉罷免法 2005.5.27

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -136,9 +136,9 @@
 
 > 釋：一、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。二、將本法施行細則第三十七條第一項，有關備具加蓋中央主管機關發給該政黨圖記之政黨撤回推薦書，向原受理登記之機關撤回推薦，逾期不予受理之規定，移列第二項後段明定之。三、本法施行細則第三十七條第二項，有關備具加蓋中央主管機關發給該政黨圖記之撤回或更換登記申請書，向原受理登記之機關撤回或更換，逾期不予受理之規定，移列第三項前段明定。本法施行細則第三十七條第三項另規定，候選人名單之更換，包括人數變更、人員異動、順序調整，其有新增之候選人者，政黨應依規定繳交表件及保證金。以本項涉及候選人參政權之行使，為明確起見，改列為第三項後段規定，並酌作文字修正。
 
-* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。全國不分區、僑居國外國民選舉候選人之保證金，依公告數額，由登記之政黨按登記人數繳納。前二項保證金應於公告當選人名單後十日內發還。但有左列情事之一者，不予發還：一、全國不分區、僑居國外國民選舉候選人未當選者。二、其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者。
+* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。全國不分區、僑居國外國民選舉候選人之保證金，依公告數額，由登記之政黨按登記人數繳納。前二項保證金應於公告當選人名單後十日內發還。但有左列情事之一者，不予發還：一、全國不分區、僑居國外國民選舉候選人未當選者。二、其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者。
 
-> 釋：一、本條現行條文第四項第一款，業經行政院於八十二年十二月二十一日以台八十二內字第四五二六四號函請立法院審議之「公職人員選舉罷免法部分條文修正草案」，予以刪除。二、為配合司法院大法官議決釋字第三四０號解釋，爰刪除原第二項有關政黨推薦之候選人其保證金減半繳納之規定，以符憲法平等原則。三、第三項之「前三項」修正為「前二項」。
+> 釋：原條文中規定，村、里長候選人免繳納保證金，參選人未經審慎考量，即登記為候選人。造成村、里長參選人數暴增，為使參選人不任意登記為候選人，藉以節省社會資源與國家公帑，並維護公平原則，爰刪除第一項後段但書免繳保證金之規定。
 
 * 38.1 登記為候選人時，應備具選舉委員會規定之表件及保證金，於規定時間內，向受理登記之選舉委員會辦理。表件不全、不符規定、保證金不足或未於規定時間內辦理者，應拒絕受理。
 
