--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -64,9 +64,9 @@
 
 > 釋：為釐清行政作業程序，於勒令歇業之處分確定後，始依行政程序法第一百二十三條及第一百二十五條規定廢止其公司登記或部分登記事項。
 
-* 18 公司名稱，不得與他公司名稱相同。二公司名稱中標明不同業務種類或可資區別之文字者，視為不相同。公司所營事業除許可業務應載明於章程外，其餘不受限制。公司不得使用易於使人誤認其與政府機關、公益團體有關或妨害公共秩序或善良風俗之名稱。公司名稱及業務，於公司登記前應先申請核准，並保留一定期間；其審核準則，由中央主管機關定之。
+* 18 公司名稱，不得與他公司名稱相同。二公司名稱中標明不同業務種類或可資區別之文字者，視為不相同。公司所營事業除許可業務應載明於章程外，其餘不受限制。公司所營事業應依中央主管機關所定營業項目代碼表登記。已設立登記之公司，其所營事業為文字敘述者，應於變更所營事業時，依代碼表規定辦理。公司不得使用易於使人誤認其與政府機關、公益團體有關或妨害公共秩序或善良風俗之名稱。公司名稱及業務，於公司登記前應先申請核准，並保留一定期間；其審核準則，由中央主管機關定之。
 
-> 釋：一、為配合行政革新及簡化登記程序，公司營業項目之登記，除載明許可業務外，其餘毋庸登記，公司名稱之預查，自應與經營之業務脫鉤，僅就公司名稱本身加以審查，爰修正第一項，並刪除原條文第二項及第三項。二、配合營業項目登記之簡化，公司所營事業應載明許可業務，其餘不受限制，爰增列為第二項。三、第四、五項移列為第三、四項。
+> 釋：一、為簡政便民，自八十七年一月一日起實施公司營業項目代碼化作業，新設立或新增所營事業者，其所營事業應依「公司行號營業項目代碼表」規定辦理。惟之前已設立登記之公司，其所營事業多為文字敘述，範圍未臻明確，致公司或招標單位需反復詢問其對應之新代碼。為提升行政效率並全面推動代碼化措施，以利業務運作，爰增列第三項規定。二、原條文第三項及第四項移列為第四項及第五項。
 
 * 19 未經設立登記，不得以公司名義經營業務或為其他法律行為。違反前項規定者，行為人處一年以下有期徒刑、拘役或科或併科新臺幣十五萬元以下罰金，並自負民事責任；行為人有二人以上者，連帶負民事責任，並由主管機關禁止其使用公司名稱。
 
@@ -392,9 +392,9 @@
 
 * 127 清算由全體無限責任股東任之。但無限責任股東得以過半數之同意另行選任清算人；其解任時亦同。
 
-* 128 股份有限公司應有二人以上為發起人。無行為能力人或限制行為能力人，不得為發起人。政府或法人均得為發起人。但法人為發起人者，以公司為限。
+* 128 股份有限公司應有二人以上為發起人。無行為能力人或限制行為能力人，不得為發起人。政府或法人均得為發起人。但法人為發起人者，以左列情形為限：一、公司。二、以其自行研發之專門技術或智慧財產權作價投資之法人。三、經目的事業主管機關認屬與其創設目的相關而予核准之法人。
 
-> 釋：為配合承認法人股東一人股份有限公司之設立，並因應公司經營之國際化、自由化，有關股份有限公司股東之住所限制，已無必要，修正第一項。
+> 釋：鑒於法人亦有參與投資商業活動擔任發起人，以利技術移轉之需要，有必要放寬法人發起人資格之限制。即法人為發起人者，除公司外，以其自行研發之專門技術或智慧財產權作價投資之法人或經目的事業主管機關核准之法人，亦可擔任公司發起人。爰修正第三項但書之規定。
 
 * 128.1 政府或法人股東一人所組織之股份有限公司，不受前條第一項之限制。該公司之股東會職權由董事會行使，不適用本法有關股東會之規定。前項公司之董事、監察人，由政府或法人股東指派。
 
@@ -478,9 +478,9 @@
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
-* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部份得為特別股；其種類，由章程定之。前項股份總數，得分次發行。但第一次應發行之股份，不得少於股份總數四分之一。股份有限公司之最低資本總額，由中央主管機關以命令定之。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之，惟抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會以三分之二董事出席，出席董事過半數決議行之，不受第二項但書、第二百六十七條第一項至第三項、第二百七十八條第二項之限制。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
+* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。股份有限公司之最低資本總額，由中央主管機關以命令定之。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
 
-> 釋：一、股份有限公司之最低資本總額，一律由中央主管機關以命令定之，其他行業性質者，由目的事業主管機關規定之，第三項增加「中央」二字，並刪除「分別性質，斟酌情形」文字。二、公司股票是否公開發行，屬企業自治事項，修正第四項。三、增列第五項，允許公司以債權作股，或以公司所需之技術、商譽作股。換股之作業均限制在發行新股一定的比例內，以免影響股東權益及公司之正常營運，故只需經董事會普通決議通過即可。四、增列第六項，於股份交換時，受讓公司發行新股時造成原股東股權稀釋，股東權益減少之情形，故需經董事會特別決議並限制可交換發行股之比例，以保障原股東之權益，又因股份交換取得新股東之有利資源，對公司整體之營運將有助益。五、原條文第六項移到第七項，為便利新承銷制度之推動（如詢價圈購、競價拍賣）及因應未來實務需要，增列但書證券管理機關得另為規定。
+> 釋：一、授權資本制之最大優點，在使公司易於迅速成立，公司資金之籌措趨於方便，公司亦無須閒置超過其營運所需之巨額資金，爰自現行折衷式之授權資本制改採授權資本制。又實務上，為因應新金融商品之發行，避免企業計算股份總數四分之一之不便，爰刪除原條文第二項但書之規定。二、第五項作文字修正。三、配合第二項及第二百七十八條第二項之修正，爰於第六項酌作修正，俾資周延。
 
 * 157 公司發行特別股時，應就左列各款於章程中定之：一、特別股分派股息及紅利之順序、定額或定率。二、特別股分派公司賸餘財產之順序、定額或定率。三、特別股之股東行使表決權之順序、限制或無表決權。四、特別股權利、義務之其他事項。
 
@@ -558,9 +558,13 @@
 
 * 171 股東會除本法另有規定外，由董事會召集之。
 
-* 172 股東常會之召集，應於二十日前通知各股東，對於持有無記名股票者，應於三十日前公告之。股東臨時會之召集，應於十日前通知各股東，對於持有無記名股票者，應於十五日前公告之。公開發行股票之公司股東常會之召集，應於三十日前通知各股東，對於持有無記名股票者，應於四十五日前公告之；公開發行股票之公司股東臨時會之召集，應於十五日前通知各股東，對於持有無記名股票者，應於三十日前公告之。通知及公告應載明召集事由。改選董事、監察人、變更章程、公司解散、合併、分割或第一百八十五條第一項各款之事項，應在召集事由中列舉，不得以臨時動議提出。代表公司之董事，違反第一項、第二項或第三項通知期限之規定者，處新臺幣一萬元以上五萬元以下罰鍰。
+* 172 股東常會之召集，應於二十日前通知各股東，對於持有無記名股票者，應於三十日前公告之。股東臨時會之召集，應於十日前通知各股東，對於持有無記名股票者，應於十五日前公告之。公開發行股票之公司股東常會之召集，應於三十日前通知各股東，對於持有無記名股票者，應於四十五日前公告之；公開發行股票之公司股東臨時會之召集，應於十五日前通知各股東，對於持有無記名股票者，應於三十日前公告之。通知及公告應載明召集事由；其通知經相對人同意者，得以電子方式為之。選任或解任董事、監察人、變更章程、公司解散、合併、分割或第一百八十五條第一項各款之事項，應在召集事由中列舉，不得以臨時動議提出。代表公司之董事，違反第一項、第二項或第三項通知期限之規定者，處新臺幣一萬元以上五萬元以下罰鍰。
 
-> 釋：一、配合第一百七十條文字，第二項之「臨時股東會」修正為「股東臨時會」，以統一法律文字。二、為配合第一百六十五條修正及考量實務上股務作業期間，增訂第三項。三、原條文第三項移列為第四項。四、按公司為分割或第一百八十五條第一項各款重要事項召集股東會，事涉股東、債權人權益甚鉅，爰修正原條文第四項，並酌作文字修正，移列為第五項。五、無表決權股僅無表決權，而非喪失出席權，其出席股東會參與討論及詢問乃基本「知」的權利，故第一項至第四項之召集通知仍有必要，爰刪除條文第五項。六、原條文第六項罰鍰數額酌作調整。
+> 釋：一、為因應電子科技之進步，節省現行公司以書面進行通知事務之成本，股東會召集之通知，得依電子簽章法規定，經相對人同意，以電子方式為之，爰修正第四項。二、第二百零一條之補選董事與本條之改選董事，性質相同，均應在召集事由中列舉，不得以臨時動議提出，爰修正第五項，將「改選」修正為「選任」，又解任董監與選任董監，同屬董監身分之變動，應等同看待，亦應在召集事由中列舉，不得以臨時動議提出，爰增列「解任」，以資周延。
+
+* 172.1 持有已發行股份總數百分之一以上股份之股東，得以書面向公司提出股東常會議案。但以一項為限，提案超過一項者，均不列入議案。公司應於股東常會召開前之停止股票過戶日前，公告受理股東之提案、受理處所及受理期間；其受理期間不得少於十日。股東所提議案以三百字為限，超過三百字者，該提案不予列入議案；提案股東應親自或委託他人出席股東常會，並參與該項議案討論。有左列情事之一，股東所提議案，董事會得不列為議案：一、該議案非股東會所得決議者。二、提案股東於公司依第一百六十五條第二項或第三項停止股票過戶時，持股未達百分之一者。三、該議案於公告受理期間外提出者。公司應於股東會召集通知日前，將處理結果通知提案股東，並將合於本條規定之議案列於開會通知。對於未列入議案之股東提案，董事會應於股東會說明未列入之理由。公司負責人違反第二項或前項規定者，處新臺幣一萬元以上五萬元以下罰鍰。
+
+> 釋：一、本條新增。二、鑒於現代公司法架構下，公司之經營權及決策權多賦予董事會，為使股東得積極參與公司之經營，爰賦予股東提案權；又為避免提案過於浮濫，參酌美國證券交易法之規定，於本項但書明定股東所提議案，以一項為限。若提二項以上議案者，所提全部議案均不列入議案。爰為第一項規定。三、為使公司有充分時間處理股東提案，爰於第二項明定公司應公告受理股東提案之時間及處所。四、為防止提案過於冗長，且鑒於我國文字三百字已足表達一項議案之內容，特於第三項就提案之字數限制在三百字以內。所稱三百字，包括理由及標點符號。如所提議案字數超過三百字者，該項議案不予列入。另，為使該股東提案有充分說明之機會，爰明定提案股東應親自或委託他人出席股東會，並參與該項議案討論。五、第四項明定董事會得不列為議案之情事，俾資明確。六、公司收到股東提出之議案後，應於股東會召集通知日前，將處理結果通知提案股東，並應將符合規定之議案，列印於開會通知，爰為第五項規定。七、公司負責人如違反第二項或第五項規定者，將課以新臺幣一萬元以上五萬元以下罰鍰，爰為第六項規定。
 
 * 173 繼續一年以上，持有已發行股份總數百分之三以上股份之股東，得以書面記明提議事項及理由，請求董事會召集股東臨時會。前項請求提出後十五日內，董事會不為召集之通知時，股東得報經主管機關許可，自行召集。依前二項規定召集之股東臨時會，為調查公司業務及財產狀況，得選任檢查人。董事因股份轉讓或其他理由，致董事會不為召集或不能召集股東會時，得由持有已發行股份總數百分之三以上股份之股東，報經主管機關許可，自行召集。
 
@@ -572,15 +576,27 @@
 
 * 176 無記名股票之股東，非於股東會開會五日前，將其股票交存公司，不得出席。
 
-* 177 股東得於每次股東會，出具公司印發之委託書，載明授權範圍，委託代理人，出席股東會。除信託事業或經證券主管機關核准之股務代理機構外，一人同時受二人以上股東委託時，其代理之表決權不得超過已發行股份總數表決權之百分之三，超過時其超過之表決權，不予計算。一股東以出具一委託書，並以委託一人為限，應於股東會開會五日前送達公司，委託書有重複時，以最先送達者為準。但聲明撤銷前委託者，不在此限。
+* 177 股東得於每次股東會，出具公司印發之委託書，載明授權範圍，委託代理人，出席股東會。除信託事業或經證券主管機關核准之股務代理機構外，一人同時受二人以上股東委託時，其代理之表決權不得超過已發行股份總數表決權之百分之三，超過時其超過之表決權，不予計算。一股東以出具一委託書，並以委託一人為限，應於股東會開會五日前送達公司，委託書有重複時，以最先送達者為準。但聲明撤銷前委託者，不在此限。委託書送達公司後，股東欲親自出席股東會者，至遲應於股東會開會前一日，以書面向公司為撤銷委託之通知；逾期撤銷者，以委託代理人出席行使之表決權為準。
 
-> 釋：一、按為有效解決公開發行公司股權分散，股東眾多，致股東會召集困難之困擾，基於實務作業之考量，並為達成「公開發行公司出席股東會使用委託書規則」第十六條爰規定，修正第二項。二、第三項標點符號酌作修正。
+> 釋：為避免股務作業之不便與爭議，股東之委託書送達公司後，欲親自出席股會時，至遲應於股東會開會前一日撤銷委託，不得於股東會召開當日撤銷委託，其逾期撤銷委託者，以委託代理人出席行使之表決權為準，爰增訂第四項。
+
+* 177.1 公司召開股東會時，得採行以書面或電子方式行使其表決權；其以書面或電子方式行使表決權時，其行使方法應載明於股東會召集通知。前項以書面或電子方式行使表決權之股東，視為親自出席股東會。但就該次股東會之臨時動議及原議案之修正，視為棄權。
+
+> 釋：一、本條新增。二、依原規定，股東出席股東會之方式，有親自出席及委託出席兩種。為鼓勵股東參與股東會之議決，公司得允許股東以書面或依電子簽章法規定之電子方式行使其表決權，惟公司應將書面或電子方式行使股東表決權之方法，載明於股東會召集通知，以資明確，爰為第一項規定。三、股東以書面或電子方式行使表決權時，究發生何種效力，宜予明定，故擬制其效力為親自出席股東會，以資明確。又以書面或電子方式行使表決權之股東，因未當場參與股東會，為使議事順利，明定該股東就該次股東會之臨時動議及原議案之修正，視為棄權，爰為第二項規定。
+
+* 177.2 股東以書面或電子方式行使表決權者，其意思表示應於股東會開會五日前送達公司，意思表示有重複時，以最先送達者為準。但聲明撤銷前意思表示者，不在此限。股東以書面或電子方式行使表決權後，欲親自出席股東會者，至遲應於股東會開會前一日，以與行使表決權相同之方式撤銷前項行使表決權之意思表示；逾期撤銷者，以書面或電子方式行使之表決權為準。股東以書面或電子方式行使表決權，並以委託書委託代理人出席股東會者，以委託代理人出席行使之表決權為準。
+
+> 釋：一、本條新增。二、股東如以書面或依電子簽章法規定之電子方式行使股東表決權，宜明定其意思表示送達公司之時間，俾資明確，爰為第一項規定。三、股東以書面或電子方式行使股東表決權後，欲親自出席股東會者，宜於股東會開會前一定時間內為撤銷已行使表決權之意思表示，並明定逾期撤銷之效力，以避免股務作業之不便與爭議，爰為第二項規定。四、股東以書面或電子方式行使表決權並以委託書委託代理人出席股東會時，以何者為準，宜予明定，鑒於股東已委託代理人出席，且亦可能涉及委託書徵求人徵得股數之計算，故以委託代理人出席行使之表決權為準，爰為第三項規定。
+
+* 177.3 公開發行股票之公司召開股東會，應編製股東會議事手冊，並應於股東會開會前，將議事手冊及其他會議相關資料公告。前項公告之時間、方式、議事手冊應記載之主要事項及其他應遵行事項之辦法，由證券管理機關定之。
+
+> 釋：一、本條新增。二、為使公開發行股票公司之股東瞭解股東會議事程序及內容，公司除應編製議事手冊外，並應於開會前將議事資料公告揭露，以便股東行使權利，爰為第一項規定。三、公開發行股票公司會議資料公告之時間、方式、議事手冊應記載之主要事項及其他應遵行事項之辦法，授權證券管理機關定之，爰為第二項規定。
 
 * 178 股東對於會議之事項，有自身利害關係致有害於公司利益之虞時，不得加入表決，並不得代理他股東行使其表決權。
 
-* 179 公司各股東，除有第一百五十七條第三款情形外，每股有一表決權。公司依本法自己持有之股份，無表決權。
+* 179 公司各股東，除有第一百五十七條第三款情形外，每股有一表決權。有左列情形之一者，其股份無表決權：一、公司依法持有自己之股份。二、被持有已發行有表決權之股份總數或資本總額超過半數之從屬公司，所持有控制公司之股份。三、控制公司及其從屬公司直接或間接持有他公司已發行有表決權之股份總數或資本總額合計超過半數之他公司，所持有控制公司及其從屬公司之股份。
 
-> 釋：第一項但書規定違反一股一權之原則，且外國立法例均無此項限制，實務上，以章程限制其表決權者占絕大部分，該項但書限制，並無實益，反增加計算上紛擾，爰予刪除。
+> 釋：一、第一項未修正。二、本條第二項第一款由原條文第二項移列而來並酌作文字修正。由於原條文第二項規定「依本法」，其範圍似嫌狹窄，未能涵蓋公司依證券交易法自己持有之股份，為周延起見，爰修正為「依法」。三、對於修法前已存在交叉持股情形，本法為避免影響層面太大，並未強制其賣出，採取「祇能賣，不能買」之彈性作法。鑒於從屬公司就其對控制公司之持股，在控制公司之股東會中行使表決權時，實際上與控制公司本身就自己之股份行使表決權無異，此與公司治理之原則有所違背。是以，有限制其行使表決權之必要，又控制公司及其從屬公司再轉投資之其他公司持有控制公司及其從屬公司之股份，亦應納入規範，爰修正第二項，並分為三款，上述應限制表決權之股份，列為第二款及第三款。另第二款及第三款股份表決權受限制之情形，除因收買而持有者外，因合併、收購等事由而持有之情形，亦包含在內。
 
 * 180 股東會之決議，對無表決權股東之股份數，不算入已發行股份之總數。股東會之決議，對依第一百七十八條規定不得行使表決權之股份數，不算入已出席股東之表決權數。
 
@@ -594,9 +610,9 @@
 
 > 釋：一、本條新增。二、按現行公司董事會以外所召集之股東會，其主席人選為何，常滋生疑義，為防杜紛爭，爰於第一項明定之。三、原條文就股東會之散會程序並無規定，易流為主席之恣意行為，無法保障股東之權益，尤其股東會開會時，主席違反公司所定之議事規則任意宣布散會，再擇期開會，不但耗費諸多社會成本，亦影響國內經濟秩序，爰於第二項明定之。
 
-* 183 股東會之議決事項，應作成議事錄，由主席簽名或蓋章，並於會後二十日內，將議事錄分發各股東。公開發行股票之公司對於持有記名股票未滿一千股之股東，前項議事錄之分發，得以公告方式為之。議事錄應記載會議之年、月、日、場所、主席姓名、決議方法、議事經過之要領及其結果，在公司存續期間，應永久保存。出席股東之簽名簿及代理出席之委託書，其保存期限至少為一年。但經股東依第一百八十九條提起訴訟者，應保存至訴訟終結為止。代表公司之董事，違反第一項、第三項或前項規定者，處新臺幣一萬元以上五萬元以下罰鍰。
+* 183 股東會之議決事項，應作成議事錄，由主席簽名或蓋章，並於會後二十日內，將議事錄分發各股東。前項議事錄之製作及分發，得以電子方式為之。公開發行股票之公司對於持有記名股票未滿一千股之股東，第一項議事錄之分發，得以公告方式為之。議事錄應記載會議之年、月、日、場所、主席姓名、決議方法、議事經過之要領及其結果，在公司存續期間，應永久保存。出席股東之簽名簿及代理出席之委託書，其保存期限至少為一年。但經股東依第一百八十九條提起訴訟者，應保存至訴訟終結為止。代表公司之董事，違反第一項、第四項或前項規定者，處新臺幣一萬元以上五萬元以下罰鍰。
 
-> 釋：一、第一項依民法第三條，簽名與蓋章具同等效力，爰修正「簽名、蓋章」為「簽名或蓋章」，以資簡化。另為使公司有充裕時間製作股東會議事錄，「十五日」修正為「二十日」。二、為簡化公開發行股票之公司分發議事錄之程序，對於未足一千股之股東，得以彈性處理，增訂第二項。三、原條文第二項酌作文字修正，並增訂「在公司存續期間，應永久保存」，以利於查考，移列為第三項。四、原條文第三項移列第四項。另按出席股東之簽名簿及代理出席之委託書，其保存期限如何，及股東提起訴訟，應如何處理之規定付之闕如，爰於第四項明定，俾資明確。五、修正原條文第四項，增列違反第一、三或四項規定之行政罰，以保障股東權益。又刪除有關「依刑法或特別刑法有關規定處罰」贅文，並移列為第五項。
+> 釋：一、第一項未修正。二、為因應電子科技之進步，節省公司通知事務之成本，議事錄之製作及分發，得依電子簽章法規定之電子方式為之，爰增訂第二項。三、原條文第二項至第五項移列為第三項至第六項，並配合酌作文字修正。
 
 * 184 股東會得查核董事會造具之表冊、監察人之報告，並決議盈餘分派或虧損撥補。執行前項查核時，股東會得選任檢查人。對於前二項查核有妨礙、拒絕或規避之行為者，各處新臺幣二萬元以上十萬元以下罰鍰。
 
@@ -631,6 +647,10 @@
 * 192 公司董事會，設置董事不得少於三人，由股東會就有行為能力之人選任之。公開發行股票之公司依前項選任之董事，其全體董事合計持股比例，證券管理機關另有規定者，從其規定。民法第八十五條之規定，對於前項行為能力不適用之。公司與董事間之關係，除本法另有規定外，依民法關於委任之規定。第三十條之規定，對董事準用之。
 
 > 釋：一、按現行規定以股東充任董事，並不能與企業所有與企業經營分離之世界潮流相契合，且公司之獲利率與公司董事由股東選任無特殊關聯，故董事不以具有股東身分為必要，修正第一項。二、為配合證券交易法第二十六條規定對董監持股須達一定成數之規定，增訂第二項。三、原條文第二項至第四項移列為第三項至第五項。
+
+* 192.1 公開發行股票之公司董事選舉，採候選人提名制度者，應載明於章程，股東應就董事候選人名單中選任之。公司應於股東會召開前之停止股票過戶日前，公告受理董事候選人提名之期間、董事應選名額、其受理處所及其他必要事項，受理期間不得少於十日。持有已發行股份總數百分之一以上股份之股東，得以書面向公司提出董事候選人名單，提名人數不得超過董事應選名額；董事會提名董事候選人之人數，亦同。前項提名股東應檢附被提名人姓名、學歷、經歷、當選後願任董事之承諾書、無第三十條規定情事之聲明書及其他相關證明文件；被提名人為法人股東或其代表人者，並應檢附該法人股東登記基本資料及持有之股份數額證明文件。董事會或其他召集權人召集股東會者，對董事被提名人應予審查，除有左列情事之一者外，應將其列入董事候選人名單：一、提名股東於公告受理期間外提出。二、提名股東於公司依第一百六十五條第二項或第三項停止股票過戶時，持股未達百分之一。三、提名人數超過董事應選名額。四、未檢附第四項規定之相關證明文件。前項審查董事被提名人之作業過程應作成紀錄，其保存期限至少為一年。但經股東對董事選舉提起訴訟者，應保存至訴訟終結為止。公司應於股東常會開會四十日前或股東臨時會開會二十五日前，將董事候選人名單及其學歷、經歷、持有股份數額與所代表之政府、法人名稱及其他相關資料公告，並將審查結果通知提名股東，對於提名人選未列入董事候選人名單者，並應敘明未列入之理由。公司負責人違反第二項或前二項規定者，處新臺幣一萬元以上五萬元以下罰鍰。
+
+> 釋：一、本條新增。二、按上市、上櫃等公開發行股票之公司，股東人數眾多，為健全公司發展及保障股東權益，推動公司治理，宜建立董事候選人提名制度，並載明於章程，俾供股東就董事候選人名單進行選任，爰為第一項規定。三、公司受理董事候選人之提名需有一定之作業程序及時間，並應踐行事前公告程序，爰為第二項規定。四、為防止提名過於浮濫，且考量董事選任須有一定持股數之支持始得當選，爰就股東提名董事候選人之資格、提名人數及應檢附之被提名人資料等，於第三項及第四項為相關規定。五、公司董事會或其他召集權人召集股東會者，應對董事候選人為形式審查，審查作業應作成紀錄，且保存一段期間，俾供日後董事選舉產生爭訟時之參考，爰為第五項及第六項規定。六、為強化董事提名審查作業資訊透明度，對於審查結果，公司應於股東常會開會四十日前或股東臨時會開會二十五日前將董事候選人名單公告；而審查後，不論被提名人列或不列入董事候選人名單，均應將審查結果通知提名股東，被提名人未被列入董事候選人名單者，並應敘明未列入之原因，其通知時間與公告時間一致，爰為第七項規定。七、公司負責人違反第二項、第六項或第七項規定者，將課以新臺幣一萬元以上五萬元以下罰鍰，爰為第八項規定。
 
 * 193 董事會執行業務，應依照法令章程及股東會之決議。董事會之決議，違反前項規定，致公司受損害時，參與決議之董事，對於公司負賠償之責；但經表示異議之董事，有紀錄或書面聲明可證者，免其責任。
 
@@ -727,6 +747,10 @@
 * 216 公司監察人，由股東會選任之，監察人中至少須有一人在國內有住所。公開發行股票之公司依前項選任之監察人須有二人以上，其全體監察人合計持股比例，證券管理機關另有規定者，從其規定。公司與監察人間之關係，從民法關於委任之規定。第三十條之規定及第一百九十二條第一項、第三項關於行為能力之規定，對監察人準用之。
 
 > 釋：一、為發揮監察人監督之功能，加強監察人之專業性及獨立性，監察人不以具有股東身分為必要，爰修正第一項。二、為配合證券交易法第二十六條規定對董監持股須達一定成數之規定，增訂第二項。三、第二項及第三項移列為第三項及第四項，並酌作修正。
+
+* 216.1 公開發行股票之公司監察人選舉，依章程規定採候選人提名制度者，準用第一百九十二條之一規定。
+
+> 釋：一、本條新增。二、監察人為公司執行監督之法定、必備機關，亦有建立監察人候選人提名制度之必要，爰增訂本條準用第一百九十二條之一董事候選人提名制度之規定。
 
 * 217 監察人任期不得逾三年。但得連選連任。監察人任期屆滿而不及改選時，延長其執行職務至改選監察人就任時為止。但主管機關得依職權，限期令公司改選；屆期仍不改選者，自限期屆滿時，當然解任。
 
@@ -966,9 +990,9 @@
 
 > 釋：為使規模較大公開發行股票之公司遇有特別議案時，股東會易於召開，在不違反多數決議之原則下，參考日本商法第三四三條之規定，增訂第三項及第四項，以緩和股東收購委託書之壓力及保障大眾投資者權益。
 
-* 278 公司非將已規定之股份總數，全數發行後，不得增加資本。增加資本後，第一次發行之股份，不得少於增加之股份總數四分之一。前二項股份總數之計算，不包括公司債可轉換股份及認股權憑證可認購股份之數額。第一項及第二項規定，於公司債可轉換或可認購股份之數額依第二百六十二條發行股份者及認股權憑證可認購股份之數額依第二百六十八條之一發行股份者，不適用之。
+* 278 公司非將已規定之股份總數，全數發行後，不得增加資本。增加資本後之股份總數，得分次發行。
 
-> 釋：一、配合第一百三十條修正刪除第一項第六款，爰刪除第三項「公司章程載有公司債可轉換股份之數額者，」之文字。二、配合第二百四十八條第一項增訂第十九款，修正第三項及第四項，將公司債可轉換股份數額及認股權憑證可認購股份之數額，排除其適用。
+> 釋：一、第一項未修正。二、按授權資本制之最大優點，在於使公司易迅速成立，其資金之籌措趨於方便，公司亦無須閒置超過其營運所需之巨額資金，爰自現行折衷式之授權資本制改採授權資本制，並為因應新金融商品之發行，避免企業計算股份總數四分之一之不便，爰修正第二項，並刪除原條文第三項及第四項之規定。
 
 * 279 因減少資本換發新股票時，公司應於減資登記後，定六個月以上之期限，通知各股東換取，並聲明逾期不換取者，喪失其股東之權利；發行無記名股票者，並應公告之。股東於前項期限內不換取者，即喪失其股東之權利，公司得將其股份拍賣，以賣得之金額，給付該股東。公司負責人違反本條通知或公告期限之規定時，各處新臺幣三千元以上一萬五千元以下罰鍰。
 
@@ -1128,9 +1152,9 @@
 
 > 釋：一、本條新增。二、分割之相關重要事項，宜記載於分割計畫書中，以達到資訊公開之效果，增訂第一項。三、參考第三百十七條之一第二項，第二項明定於發送分割承認決議股東會之召集通知時，一併發送於股東，以利股東決定行使表決權。
 
-* 317.3 公司為促進合理經營而與他公司合併者，依下列各款規定辦理：一、其存續公司或新設公司於申請對消滅公司所有不動產、應登記之動產及各項擔保物權之變更登記時，免繳納登記規費。二、因合併而發生之印花稅及契稅，一律免徵。三、原供消滅公司直接使用之土地隨同一併移轉時，經依土地稅法審核確定其現值後，即予辦理土地所有權移轉登記，其應繳納之土地增值稅准予記存，由合併後之存續公司或新設公司於該項土地再移轉時一併繳納之；其破產或解散時，經記存之土地增值稅應優先受償。四、因合併出售原供消滅公司直接使用之機器、設備，其出售所得價款，全部用於或抵付該合併計畫新購機器、設備者，免徵印花稅。五、因合併出售原供消滅公司直接使用之廠礦用土地、廠房，其出售所得價款，全部用於或抵付該合併計畫新購或新置土地、廠房者，免徵該合併公司應課之契稅及印花稅。六、因合併產生之商譽得於十五年內攤銷之。七、因合併產生之費用得於五年內攤銷之。八、因合併出售不良債權所受之損失，得於十五年內認列損失。
+* 317.3 （刪除）
 
-> 釋：一、本條新增。二、為促進公司合理經營，對於公司合併應給予優惠，以鼓勵公司進行合併，提高其競爭力，創造更有利的投資環境。
+> 釋：一、本條刪除。二、公司合併租稅優惠，企業併購法及促進產業升級條例已有明文，毋庸於公司法重複規定。又公司法係規範公司內部組織運作及設立登記事宜之法律，租稅優惠規定植入公司法中，與公司法體例不合，本條爰予刪除。
 
 * 318 公司合併後，存續公司之董事會，或新設公司之發起人，於完成催告債權人程序後，其因合併而有股份合併者，應於股份合併生效後；其不適於合併者，應於該股份為處分後，分別循左列程序行之：一、存續公司，應即召集合併後之股東會，為合併事項之報告，其有變更章程必要者，並為變更章程。二、新設公司，應即召開發起人會議，訂立章程。前項章程，不得違反合併契約之規定。
 
