公職人員選舉罷免法 2005.11.22

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -404,23 +404,27 @@
 
 > 釋：一、第一項增列「候選人」等字，罰金部分並酌量提高。二、第四十五條之二規範之主體除候選人外，尚有政黨，爰增列第二項，並採兩罰規定。三、原第二項移列第三項，並酌作修正。
 
-* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，併科新臺幣六十萬元以上六百萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者，亦同。犯第一項之罪者，用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之；犯第二項之罪者，所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。
+* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處三年以上十年以下有期徒刑，併科新臺幣二百萬元以上二千萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者，亦同。預備犯前二項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之；犯第二項之罪者，所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：一、因社會經濟情勢已與從前不同，犯本罪者每挾其經濟上之優勢，為所欲為，除應科刑外，併科新臺幣六十萬元以上六百萬元以下罰金，以淨化選風。二、用以行賄之物，不問何人所有，均予沒收，始能達到杜絕賄選之目的，爰增列第三項前段規定。三、原第三項移列第三項後段，並酌作修正。
+> 釋：一、對候選人或具候選人資格者行求期約或交付賄賂，使候選人或具候選人資格者放棄競選或為一定之競選活動之行為，使國家公職間接淪為候選人間買賣商品，民主選舉之公平性喪失殆盡，惡性非輕，原所處五年以下有期徒刑，併科新臺幣六十萬元以上六百萬元以下罰金，實不足昭顯其惡性，並嚇阻此類犯行，爰提高刑度至三年以上十年以下有期徒刑，併科新臺幣二百萬元以上二千萬元以下罰金。二、第二項文字不作修正，惟配合第一項之修正，本項適用處罰之刑度及罰金一併予以提高。三、為杜絕賄選，增列第三項明定對於所謂「搓圓仔湯」之行為，處罰其預備犯。四、原條文第三項移列為第四項，並配合第三項之增列，酌作文字修正。
 
 * 90 以強暴、脅迫或其他非法之方法為左列行為之一者，處五年以下有期徒刑：一、妨害他人競選或使他人放棄競選者。二、妨害他人為罷免案之提議、連署或使他人為罷免案之提議、連署者。前項之未遂犯罰之。
 
-* 90.1 對於有投票權之人，行求期約或交付賄賂或其他不正利益，而約其不行使投票權或為一定之行使者，處五年以下有期徒刑，得併科新臺幣四十萬元以上四百萬元以下罰金。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲候選人為共犯者免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲候選人為共犯者，減輕或免除其刑。
+* 90.1 對於有投票權之人，行求期約或交付賄賂或其他不正利益，而約其不行使投票權或為一定之行使者，處三年以上十年以下有期徒刑，得併科新臺幣一百萬元以上一千萬元以下罰金。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲候選人為正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲候選人為正犯或共犯者，減輕或免除其刑。
 
-> 釋：一、本條新增。二、因社會經濟情勢已與從前不同，犯本罪者每挾其經濟上之優勢，為所欲為，除應科刑外，並參酌第九十一條，規定得併科新臺幣四十萬元以上四百萬員以下罰金。三、為徹底杜絕賄選，預備犯亦應處罰。四、用以行賄之物，不問何人所有，均一律沒收，始能達到杜絕賄選之目的。
+> 釋：一、為昭顯賄選行為之惡性，並有效嚇阻賄選犯行，爰將原處五年以下有期徒刑，得併科新臺幣四十萬元以上四百萬元以下罰金，修正為處三年以上十年以下有期徒刑，得併科一百萬元以上，一千萬元以下罰金。二、第二項預備賄選部分，雖未著手實施，惟既有預備之事實，亦一併提高其刑度。
 
-* 91 有左列行為之一者，處五年以下有期徒刑，併科新臺幣五十萬元以上五百萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員，不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使其不為提議或連署，或為一定之提議或連署者。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。
+* 90.2 直轄市、縣（市）議會議長、副議長、鄉（鎮、市）民代表會主席及副主席之選舉，對於有投票權之人，行求期約或交付賄賂或其他不正利益，而約其不行使投票權或為一定之行使者，處三年以上十年以下有期徒刑，得併科新臺幣二百萬元以上二千萬元以下罰金。前項之選舉，有投票權之人，要求期約或收受賄賂或其他不正利益，而許以不行使其投票權或為一定之行使者，亦同。預備犯前二項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。犯第二項之罪者，所收受之賄賂沒收之。如全部或一部不能沒收時，追徵其價額。犯第一項、第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲候選人為正犯或共犯者，免除其刑。在偵查中自白者，減輕其刑；因而查獲候選人為正犯或共犯者，減輕或免除其刑。
 
-> 釋：配合第九十條之一增訂，修正本條第一項，並增列第二項及第三項規定。
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
-* 91.1 意圖漁利，包攬第八十九條第一項、第二項、第九十條之一第一項或第九十一條第一項各款之事務者，處一年以上七年以下有期徒刑，得併科新臺幣五十萬元以上五百萬元以下罰金。前項之未遂犯罰之。
+* 91 有下列行為之一者，處一年以上七年以下有期徒刑，併科新臺幣一百萬元以上一千萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員，不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使其不為提議或連署，或為一定之提議或連署者。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。
 
-> 釋：本條新增。
+> 釋：一、配合第九十條之一對有投票權人行賄罪處罰刑度及罰金之提高，第一項第一款之犯行，係間接透過對團體或機構之行賄，達到實際影響投票之效果，惡性與對有投票權人行賄罪相當，爰一併提高刑度及罰金。二、第一項第二款對罷免案提議人或連署人，行求期約或交付賄賂，使其不為提議或連署，或為一定之提議或連署，惡性與前款犯行相當，爰一併提高其刑度及罰金，並酌作文字修正。
+
+* 91.1 意圖漁利，包攬第八十九條第一項、第二項、第九十條之一第一項、第九十條之二第一項、第二項或第九十一條第一項各款之事務者，處三年以上十年以下有期徒刑，得併科新臺幣一百萬元以上一千萬元以下罰金。前項之未遂犯罰之。
+
+> 釋：一、配合第九十條之二之增列，將意圖漁利，包攬各級民意機關正、副首長選舉賄選者納入本條處罰，並一併提高處罰之刑度及罰金。二、第二項未修正。
 
 * 92 意圖使候選人當選或不當選，以文字、圖畫、錄音、錄影、演講或他法，散布謠言或傳播不實之事，足以生損害於公眾或他人者，處五年以下有期徒刑。
 
